--- a/printcetnrum_web.client/package.json
+++ b/printcetnrum_web.client/package.json
@@ -27,6 +27,7 @@
     "jest-editor-support": "*",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
+    "startbootstrap-agency": "^7.0.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
