--- a/printcetnrum_web.client/angular.json
+++ b/printcetnrum_web.client/angular.json
@@ -31,10 +31,11 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets/"
+              //{
+              //  "glob": "**/*",
+              //  "input": "public"
+              //}
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
