--- a/PrintCetnrum_Web.Server/appsettings.json
+++ b/PrintCetnrum_Web.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnStr": "Data Source=(localdb)\\Local_DB; Initial Catalog = PrintCentrumDB; Integrated Security=True"
+  }
 }
