--- a/PrintCetnrum_Web.Server/appsettings.json
+++ b/PrintCetnrum_Web.Server/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServerConnStr": "Data Source=(localdb)\\Local_DB; Initial Catalog = PrintCentrumDB; Integrated Security=True"
+  },
+  "EmailSettings": {
+    "From": "printcentrumreset@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "UserName": "printcentrumreset@gmail.com",
+    "Password": "onrc away rtfe siel"
   }
 }
