create directory for every user

--- a/PrintCetnrum_Web.Server/PrintCetnrum_Web.Server.csproj
+++ b/PrintCetnrum_Web.Server/PrintCetnrum_Web.Server.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Folder Include="Context\" />
     <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\UserData\" />
+    <Folder Include="wwwroot\UserData\Dominator\" />
   </ItemGroup>
 
 </Project>
